# AI_Resume_Optimizer

./: .gitignore  app.py  prompt.txt  pyproject.toml
components/: Create_Resume.py  Resume_pdf.py  User_Info.py
