[project]
name = "ai-resume-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.46.0",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "streamlit>=1.59.2",
    "streamlit-local-storage>=0.0.25",
]
